Changed title in welcome.htm to  <h1>The Label-Generator Application version 0.1</h1>

--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -2,7 +2,7 @@
 	<html xmlns:th="http://www.thymeleaf.org">
 	<head><title>Welcome</title></head>
 	<body>
-	    <h1>Welcome to the Spring Boot Flow!</h1>
+	    <h1>The Label-Generator Application version 0.1</h1>
 	    <form action="/next" method="post">
 	        <p>Do you want to proceed?</p>
 	        <button type="submit" name="choice" value="yes">Yes</button>
